--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-icons": "^4.1.0",
-    "react-table": "^7.6.2"
+    "react-table": "^7.6.2",
+    "swr": "^0.4.0"
   },
   "devDependencies": {
     "namor": "^2.0.2"
