--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 4000",
-    "build": "next build",
-    "start": "next start"
+    "build": "next build --profile",
+    "start": "next start -p 4000"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.0.4",
@@ -13,13 +13,16 @@
     "@emotion/styled": "^11.0.0",
     "framer-motion": "^3.1.1",
     "next": "10.0.4",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
     "react-icons": "^4.1.0",
     "react-table": "^7.6.2",
     "swr": "^0.4.0"
   },
   "devDependencies": {
     "namor": "^2.0.2"
+  },
+  "optionalDependencies": {
+    "fsevents": "2.1.3"
   }
 }
