--- a/package.json
+++ b/package.json
@@ -15,9 +15,13 @@
     "next": "10.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hook-form": "^6.14.2",
     "react-icons": "^4.1.0",
+    "react-select": "^3.2.0",
     "react-table": "^7.6.2",
-    "swr": "^0.4.0"
+    "string-format": "^2.0.0",
+    "swr": "^0.4.0",
+    "yup": "^0.32.8"
   },
   "devDependencies": {
     "namor": "^2.0.2"
