--- a/package.json
+++ b/package.json
@@ -28,5 +28,6 @@
   "optionalDependencies": {
     "fsevents": "2.1.3"
   },
-  "browserslist": "> 0.25%, not dead"
+  "browserslist": [">0.3%", "not ie 11",
+     "not dead", "not op_mini all"]
 }
